# ironman

./: .env.example  .gitignore  Makefile  README.md  install_requirements.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
jarvis/: __init__.py  __main__.py  assistant.py  config.py
jarvis/nlp/: __init__.py  action_phrases.py  playmusic.py  playsounds.py  speech2text.py  text2speech.py
jarvis/skills/: __init__.py  check_hardware.py  datetime_info.py  get_weather.py  google_calendar.py  greet_startup.py  power_options.py  take_notes.py  take_screenshot.py  tell_joke.py  text_extractor.py  translate.py  webbrowser_functions.py  wikipedia_search.py  wolfram.py
jarvis/skills/systemcontrols/: __init__.py  key.py  keyboard.py  systemcontrol.py
jarvis/web/: __init__.py  __main__.py  dispatch.py  server.py  tts.py
jarvis/web/static/: index.html
scripts/: clone_test.py  prepare_voice.sh  setup_mac.sh
tests/: test_config.py  test_imports.py  test_new_skills.py  test_phrases.py  test_skills.py  test_web.py
